--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.application.name=currency-exchange-service
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.jpa.hibernate.ddl-auto = create
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.jpa.hibernate.ddl-auto = update
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=password
 
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=update
